Pluma y Corregir Spray

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
                 <input type="color" class="colorChoose" id="colorPicker">
                 <img class="imgPaint" src="./img/paintbrush-solid.svg" alt="Pincel" id="color">
             </label>
+            <button id="dropdownButton" class="dropdownBtn">▼</button>
+            <div id="dropdownMenu" class="dropdownContent">
+                <img src="./img/paintbrush-solid.svg" alt="Opción 1" class="dropdownItem" id="option1">
+                <img src="./img/pen-nib-solid.svg" alt="Opción 2" class="dropdownItem" id="option2">
+                <img src="./img/spray-can-solid.svg" alt="Opción 3" class="dropdownItem" id="option3">
+            </div>      
         </div>
 
         <div class="divVoid">
@@ -42,6 +48,24 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/script.js"></script>
+    <script>
+        // Funcionalidad del menú desplegable
+        const dropdownButton = document.getElementById('dropdownButton');
+        const dropdownMenu = document.getElementById('dropdownMenu');
+
+        dropdownButton.addEventListener('click', () => {
+            dropdownMenu.classList.toggle('show');
+        });
+
+        // Cerrar el menú si se hace clic fuera de él
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropdownBtn')) {
+                if (dropdownMenu.classList.contains('show')) {
+                    dropdownMenu.classList.remove('show');
+                }
+            }
+        };
+    </script>
 </body>
 
 </html>
