Prueba Nuevo Modo

--- a/public/juego2.html
+++ b/public/juego2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Druow</title>
+    <title>Modo Espejo</title>
 </head>
 
 <body>
@@ -36,14 +36,6 @@
         <img class="imgFill" src="./img/bucket-solid.svg" alt="Rellenar" id="fillButton">
 
         <img class="imgErase" src="./img/rotate-right-solid.svg" alt="Borrar" id="eraseButton">
-
-        <div clas="divGrid">
-            <img class="imgGrid" src="./img/square-pen-solid.svg" alt="Grid" id="gridButton">
-        </div>
-
-        <div class="divSave">
-            <img class="imgSave" src="./img/floppy-disk-solid.svg" alt="Guardar" id="saveButton">
-        </div>
 
     </div>
 
